--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,29 @@ body {
     display: block;
     color: #D35400;
 }
+.product {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px 20px;
+    background-color: #F9E79F;
+    border-bottom: 2px solid #F7DC6F;
+    border-radius: 15px;
+}
+.product div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: #BA4A00;
+}
+.product #price{
+    font-weight: bolder;
+    
+}
+.details {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    color: brown;
+}
